Fix blog posts on mobile

--- a/src/styles/BlogPost.module.css
+++ b/src/styles/BlogPost.module.css
@@ -47,6 +47,7 @@
 .description {
 	font-size: 1.4rem;
 	max-width: 60rem;
+	width: 100%;
 }
 
 .description :is(h1, h2, h3) {
